# flappybird

./: .env.example  .gitignore
client/: .env.example  index.html  package.json  vite.config.ts
server/: README.md  admin.py  main.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 239432a51915_create_bet_table.py  5eccb15d0153_add_hash_column_to_user_table.py  70dc599f88ba_create_game_table.py  8b20e8dbe86e_create_user_table.py  8eab31aa4303_create_table_betside_and_add_.py  9ac8c4224247_add_sid_column_to_user_table.py  9bfaf7413dfc_add_pending_balance_and_unwagered_.py  f303f3ed6bca_add_is_bot_column_to_user_table.py  f897dba2ce5c_create_referral_table_and_corresponding_.py
server/src/: app.py  config.py  crud.py  database.py  enums.py  logger.py  middlewares.py  utils.py
server/src/api/dependencies/: auth.py
server/src/api/routers/: __init__.py  admin.py  auth.py  referral.py  user.py
server/src/bot/: __init__.py  async_bot.py  async_bot_utils.py
server/src/bot/handlers/: __init__.py  start.py
server/src/bot_users/: __init__.py  generate_bot_users.py  usernames.json  users.json
server/src/game/: __init__.py  crash.py
server/src/models/: __init__.py  bet.py  betside.py  game.py  referral.py  user.py
server/src/schemas/: __init__.py  base.py  state_storage.py  web.py
server/src/sio_utils/: __init__.py  base.py  extended.py
server/src/sio_utils/event_handlers/: __init__.py  cash_out.py  enter_room.py  place_bet.py
server/src/storage/: __init__.py  base_storage.py  redis_storage.py
server/src/utils/: cash_out.py
(+32 files in other folders)
