[project]
name = "flappybird"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.1",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.12.0",
    "pytelegrambotapi>=4.32.0",
    "python-socketio>=5.16.1",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.48",
    "telegram-webapp-auth>=3.0.7",
]
